--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,16 @@
+body {
+  margin: 0;
+  overflow: hidden;
+  font-family: sans-serif;
+}
+
 :root {
   --highlight: #ff7800;
   --bkg-a: #222;
+}
+
+hr {
+  color: #fff1;
 }
 
 #container {
@@ -56,12 +66,20 @@
 
 /* GENERIC */
 
+input {
+  background: #0002;
+  border: solid 1px #fff2;
+  color: #888;
+  outline: none;
+}
+
 button {
 	color: #fff;
 	background: #0001;
 	border: 1px solid #fff2;
 	padding: 2px 10px;
   margin: 0;
+  outline: none;
 }
 
 button:hover {
@@ -72,7 +90,19 @@ button:hover {
   margin: 0;
 }
 
-/* TABS */
+button:disabled {
+	color: #888;
+	background: #fff1 !Important;
+}
+
+button:disabled:hover {
+	color: #999 !Important;
+	background: #fff2 !Important;
+}
+
+/* ----- TABS ----- */
+
+/* PACKAGE BROWSER */
 
 #tab-package-browser div.browser-container {
   margin: auto;
@@ -105,4 +135,51 @@ button:hover {
 
 #tab-package-browser ul li.active {
   background: var(--highlight);
+}
+
+/* ITEM BROWSER */
+
+#tab-package {
+  flex-direction: column;
+}
+
+#tab-package table {
+  width: 100%;
+  overflow-y:scroll;
+}
+
+#tab-package table td.package-icon {
+  width: 128px;
+  padding: 10px;
+}
+
+#tab-package ul {
+  height: 300px;
+  background: #0005;
+  border: 1px solid #fff2;
+  list-style: none;
+  padding: 10px;
+  margin: 10px;
+}
+
+#tab-package ul li {
+  color: #fff8;
+  padding: 5px;
+}
+
+#tab-package ul li:nth-child(odd) {
+  background: #fff1;
+}
+
+#tab-package ul li:hover {
+  color: #fff;
+  background: #fff5;
+}
+
+#tab-package ul li.active {
+  background: var(--highlight);
+}
+
+#tab-package button.save {
+  margin: 0 10px;
 }
