--- a/app/css/style.css
+++ b/app/css/style.css
@@ -27,6 +27,10 @@ hr {
   height: 1px;
 }
 
+fieldset {
+  border: 1px solid #fff3;
+}
+
 td {
   color: #888;
 }
@@ -88,6 +92,11 @@ select {
   display: flex;
   width: 100%;
   background: var(--bkg-a);
+}
+
+#toaster {
+  margin: auto 0;
+  position: absolute;
 }
 
 /* GENERIC */
